objects/Customer_Portal_Savings_Calculator__c.object
<CustomObject>
    <description>Customer Portal Savings Calculators can be used to perform a ROI calculation on the fly.  Under support email templates, you can email your customer using the Customer Portal ROI Calculator template.</description>
    <fields>
        <fullName>Avg_time_spent_on_case_minutes__c</fullName>
        <formula>(Working_Hours_Per_Day__c / Number_of_Cases_Calls_per_Day__c )*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. time spent on case (minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_deflection_minutes__c</fullName>
        <formula>Estimated_Productivity_Savings__c  *  Avg_time_spent_on_case_minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Deflection (minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please enter a description of this return on investment calculation.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Enter the email address to email this calculation to your customer.  Use the customer portal email template under the Services and Support Email Template Folder.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Productivity_Savings__c</fullName>
        <inlineHelpText>Enter the percentage of the estimated time savings for your customer support team. i.e. 25%-30% savings is expected for opening up the self-service portal channel.</inlineHelpText>
        <label>Estimated Productivity Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTE_Cost_hour__c</fullName>
        <inlineHelpText>Please enter the cost per hour of your FTE (full time equivalent) for your call center representatives.</inlineHelpText>
        <label>FTE Cost/hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Cases_Calls_per_Day__c</fullName>
        <formula>(Number_of_Cases_Calls_per_week__c / Number_of_Support_Employees__c) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Cases per Rep per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Cases_Calls_per_week__c</fullName>
        <inlineHelpText>Please enter the Number of Cases/Calls per week.</inlineHelpText>
        <label>Number of Cases/Calls per week</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Support_Employees__c</fullName>
        <inlineHelpText>Please enter the Number of Support Employees</inlineHelpText>
        <label>Number of Support Employees</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Savings_per_Year__c</fullName>
        <formula>Total_savings_per_year_hours_per_year__c  *  FTE_Cost_hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Savings per Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_saving_per_week_hours_per_week__c</fullName>
        <formula>(Number_of_Cases_Calls_per_week__c * Call_deflection_minutes__c )/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total saving per week  (hours per week)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_savings_per_year_hours_per_year__c</fullName>
        <formula>Total_saving_per_week_hours_per_week__c *52</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total savings per year (hours per year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Hours_Per_Day__c</fullName>
        <inlineHelpText>What is the average number of working hours per call center reps?</inlineHelpText>
        <label>Working Hours Per Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customer Portal Savings Calculator</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Customer Portal Savings Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Portal Savings Calculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>